<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/auth_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/auth_email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/auth_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/auth_password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/auth_enter"
            style="@style/FirebaseUI.Button.AccountChooser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_submit_button"
            android:drawableRight="@drawable/ic_https_black_24dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>